edit placement of feedback form for mobile. fix aligntment of playlist TOC for rtl languages.

--- a/docs/sites/all/themes/ssd/sass/style-rtl.scss
+++ b/docs/sites/all/themes/ssd/sass/style-rtl.scss
@@ -15,3 +15,10 @@
   padding-right: 0px;
   padding-left: 10px;
 }
+#playlist-controller #playlist-table {
+  text-align: right;
+}
+#playlist-controller {
+  left: 0;
+  right: auto;
+}
