--- a/docs/sites/all/themes/ssd/sass/style.scss
+++ b/docs/sites/all/themes/ssd/sass/style.scss
@@ -622,6 +622,9 @@ ul.secondary li a {
     -moz-border-radius: 0;
     text-align: center;
   }
+  #block-feedback-form {
+    bottom: 80px;
+  }
 }
 
 ul.slides {
